mini/pengbai/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pengbai
  namespace: default
spec:
  selector:
    app: pengbai
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
