mini/pengbai/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pengbai
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pengbai-mario.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pengbai
                port:
                  name: https
